# MedieVault

./: .gitignore  main.py  pyproject.toml
medievault/: config.py
medievault/models/: __init__.py  books.py  games.py  music.py  screen.py
medievault/storage/: database.py
