[project]
name = "medievault"
version = "0.1.0"
description = "Personal cultural media library with automated data pipelines"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # HTTP & APIs
    "httpx>=0.27",
    "spotipy>=2.24",

    # Data validation & settings
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",

    # Pipelines
    "prefect>=3.0",

    # Data quality
    "great-expectations>=0.18",

    # Utilities
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "loguru>=0.7",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",

    # Code quality
    "ruff>=0.4",
    "mypy>=1.10",

    # Type stubs
    "types-requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = ["if __name__ == '__main__'"]
